--- a/app/views/customers/_list.html.haml
+++ b/app/views/customers/_list.html.haml
@@ -11,28 +11,26 @@
     %li= Location.model_name.human
 -@customers.each do |customer|
   .customer
-    - if customer.id == @customer.id
-      %ul.title#active
-        %li= customer.name
-        %li= customer.shortname
-        %li= customer.locations.count
-        %li.actions
-          = link_to image_tag("/images/icons-nancy/container-close.gif"), customers_path(:order => params[:order])
-          = link_to image_tag("/images/icons-nancy/edit.gif"), edit_customer_path(customer, :order => params[:order]) if can? :manage, Customer
-          = link_to image_tag("/images/icons-nancy/delete.gif"), customer_path(customer, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete if can? :manage, Customer
-        .clear
-      .nestedRessources
-        = render :partial => 'customers/locations/show'
-        = render :partial => 'customers/contacts/list'
-        .clear
-    - else
-      %ul.title
-        %li= customer.name
-        %li= customer.shortname
-        %li= customer.locations.count
-        %li.actions
-          = link_to image_tag("/images/icons-nancy/container-open.gif"), customer_path(customer, :order => params[:order])
-          = link_to image_tag("/images/icons-nancy/edit.gif"), edit_customer_path(customer, :order => params[:order]) if can? :manage, Customer
-          = link_to image_tag("/images/icons-nancy/delete.gif"), customer_path(customer, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete if can? :manage, Customer
-        .clear
+    %ul.title{:id => "#{'active' if customer.id == @customer.id}"}
+      %li= customer.name
+      %li= customer.shortname
+      %li= customer.locations.count
+      %li.actions
+        = link_to image_tag("/images/icons-nancy/container-close.gif"), customers_path(:order => params[:order])
+        = link_to image_tag("/images/icons-nancy/edit.gif"), edit_customer_path(customer, :order => params[:order]) if can? :manage, Customer
+        = link_to image_tag("/images/icons-nancy/delete.gif"), customer_path(customer, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete if can? :manage, Customer
       .clear
+    - if customer.id == @customer.id
+      #resources
+        .location
+          - if !@show_location_form
+            = render :partial => 'customers/locations/show' 
+          - else
+            = render :partial => 'customers/locations/form'
+        .contacts
+          %h2= Contact.model_name.human
+          - if !@location.new_record? && !@show_contact_form
+            = render :partial => 'customers/contacts/list'
+          - elsif !@location.new_record? && @show_contact_form
+            = render :partial => 'customers/contacts/form'
+        .clear
