--- a/app/stylesheets/locations.scss
+++ b/app/stylesheets/locations.scss
@@ -1,151 +1,1 @@
-@import "partials/base";
-
-body#customers, body#locations, body#contacts { 
-  div.toolbar li,  ul.title li { @include grid(26); }
-  ul.title li.actions {
-    @include grid(10);
-    text-align: right;
-  }
-}
-div#customerForm {
-	
-  legend {
-	font-weight: bold;
-	padding-left: 13px;
-	color: $darkGrey;
-		  }
-   div#createCustomer{
-   form{
-   border: 1px solid grey;
-	border-top:5px solid $orangeRed;}
-   }
-   a {display: block; font-weight:bold; padding: 0px 0px 15px 15px; color: white;}
-  
-  dl {
-        dt {
-      @include grid(12,0,1);
-      text-align: right;
-      margin-bottom: 10px;
-    }
-    dd {
-      margin-bottom: 10px;
-      @include grid(15);
-      input { width: 150px; }
-      input.zip { width: 40px; }
-      input.city { width: 90px; }
-      input.title { width: 82px; }
-    }
-  }
-  input.submit { margin-left: 680px !important}
-}
-
-div.customer {
-  color: $darkGrey;
-  margin-bottom: 5px;
-  
-  div.nestedRessources {
-    @include roundedBottom;
-    background-color: white;
-    border-left: 1px solid grey;
-    border-right: 1px solid grey;;
-    border-bottom: 1px solid grey;
-    padding: 0px 0px;
-
-    div.location {
-	  background-color: white;
-      @include roundedTop;
-	  @include roundedBottom;
-	  border-top:5px solid $darkGrey;
-      padding: 8px;
-      
-      .details {
-        ul li { @include grid(26); }
-      
-      }
-      form {
-	      background-color: transparent !important;
-        padding: 0px !important;
-        dl {
-          dt {
-            @include grid(10);
-            margin-bottom: 10px;
-            text-align: right;
-          }
-		   
-          dd {
-            @include grid(18);
-            margin-bottom: 10px;
-            input { width: 150px; }
-            input.zip { width: 40px; }
-            input.city { width: 90px; }
-          }
-          dt.submit {
-            margin-left: 82px;
-            input.submit { margin: 0px !important; }
-          }
-        }
-      
-	  }
-    }
-    div.contacts {
-      @include roundedTop;
-      padding: 8px;
-	    border-top:5px solid $darkGrey;
-      ul {
-        li { @include grid(26); }
-        li.fon {
-          @include grid(30);
-          span { display: block; }
-        }
-        li.actions { @include grid(6);}
-      }
-      ul.toolbar {
-        color: grey;
-        border-bottom: 2px dotted grey;
-        margin-bottom: 20px;
-
-      }
-      ul.record { margin-bottom: 10px; }
-      form {
-        background-color: transparent !important;
-        padding: 0px !important;
-        dl {
-          dt {
-            @include grid(9);
-            margin-bottom: 10px;
-            text-align: right;
-          }
-          dd {
-            @include grid(20);
-            margin-bottom: 10px;
-            input { width: 150px; }
-            input.title { width: 89px; }
-            input.zip { width: 40px; }
-            input.city { width: 90px; }
-          }
-          dt.submit {
-            margin-left: 82px;
-            input.submit { margin: 0px !important; }
-          }
-        }
-      }
-    }
-    
-    
-    div.details h2, div.details span.actions, form legend {
-      font-weight: bold;
-	  color: $darkRed;
-      font-size: 11px;
-    }
-    div.details h2, form legend { @include grid(78) }
-    div.details span.actions, form a {
-      @include grid(10);
-      text-align: right;
-    }
-    div.pagination {
-      display: inline;
-      * { display: none; }
-      span.previous_page, a.previous_page, span.next_page, a.next_page { display: inline; }
-    }
-  }
-}
+@import "customers";
