--- a/app/views/customers/contacts/_form.html.haml
+++ b/app/views/customers/contacts/_form.html.haml
@@ -1,13 +1,13 @@
-= form_for([@customer, @location, @form_contact], :html => {:style => "display: #{@displayContactForm || 'none'};"}) do |f|
+= form_for([@customer, @location, @contact], :html => {:style => "display: #{@show_contact_form ? 'block' : 'none'};"}) do |f|
   %fieldset
-    -if @form_contact.errors.any?
+    -if @contact.errors.any?
       #error_explanation
-        %h2= "#{pluralize(@form_contact.errors.count, "error")} prohibited this contact from being saved:"
+        %h2= "#{pluralize(@contact.errors.count, "error")} prohibited this contact from being saved:"
         %ul
-          = @form_contact.errors.full_messages.each do |msg|
+          = @contact.errors.full_messages.each do |msg|
             %li= msg
     %legend= t('helpers.form', :model=> Contact.model_name.human)
-    = link_to image_tag("/images/icons-nancy/container-close.gif"), customer_location_path(@customer, @location, :order => params[:order])
+    = link_to image_tag("/images/icons-nancy/container-close.gif"), :back
     %hr.clear/
     %dl
       %dt= f.label :salutation
