--- a/app/views/works/_form.html.haml
+++ b/app/views/works/_form.html.haml
@@ -13,7 +13,7 @@
       %dd.time= f.text_field :ended_at, :value => @work.ended_at.strftime('%H:%M'), :size => 4
       %dd.description= f.text_area :description
       %dt.fees= f.label :fee
-      %dd.fees= select_tag("work[fee]", options_for_select(@fees.map {|f| ["#{t :works_charge_with} #{number_to_currency(f, :unit => @currency)}", "#{f}"]}))
+      %dd.fees= select_tag("work[fee]", options_for_select(@fees.map {|fee| ["#{t :works_charge_with} #{number_to_currency(fee, :unit => @currency)}", "#{fee}"]}))
       %dt.submit
         = f.hidden_field :project_id, :value => @project_form_id
         = f.hidden_field :day, :value => @daySelected.strftime("%Y-%m-%d")
