--- a/app/views/projects/expenses/_list.html.haml
+++ b/app/views/projects/expenses/_list.html.haml
@@ -8,8 +8,8 @@
     %li.amount= Expense.human_attribute_name('amount')
     .clear
   %ul.record
-    %li.from am 23.03.2010 von Gerrit Wanderer
-    %li.description Lorem Ipsum
-    %li.amount 20,00€
-    %li.action= image_tag('/images/icons-nancy/delete.gif')
+    - @project.expenses.each do |expense|
+      %li.from am #{expense.created_at}
+      %li.description= expense.description
+      %li.amount= expense.amount
 = render :partial => 'projects/expenses/form'
