--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -4,8 +4,10 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import "partials/reset";
 @import "partials/base";
+@import "compass/css3";
+@import "blueprint";
 @import "fancy-buttons";
-
+@import "partials/form";
 
 html { height: 100% ;}
 html.js input.hide_nojs{ display: none; }
@@ -105,7 +107,7 @@ div#content {
   @include rounded;
   background-color: white;
   padding: 30px;
-  width: 900px;
+  width: 902px;
   div.wizard {
     @include rounded;
     margin-bottom: 20px;
@@ -116,8 +118,8 @@ div#content {
   form {
  	@include rounded;
 	background-color: $yellow;
-  padding-top: 15px;
-	padding-left: 5px;
+/*  padding-top: 15px;
+  padding-left: 5px;*/
     input.submit {
         @include fancy-button(#FF4E00, 13px);
         width: 200px;
@@ -125,9 +127,6 @@ div#content {
     }
 	
 	  }
-	form#new_customer{
-	padding-left: 15px;}
-  
   div.toolbar {
     @include rounded();
     background-color: white;
